Now you can delete item and change image

--- a/app/src/main/res/layout/food_row_item.xml
+++ b/app/src/main/res/layout/food_row_item.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/row_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/d_xl"
-    android:layout_marginTop="@dimen/d_xl"
-    android:layout_marginEnd="@dimen/d_xl"
-    android:layout_marginBottom="@dimen/d_m"
-    android:gravity="left">
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:gravity="left"
+    android:paddingStart="@dimen/d_xl"
+    android:paddingTop="@dimen/d_l"
+    android:paddingEnd="@dimen/d_xl"
+    android:paddingBottom="@dimen/d_l">
 
     <ImageView
         android:id="@+id/imageView_food"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:scaleType="centerCrop"
         android:src="@drawable/bbq"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +56,7 @@
         android:id="@+id/button_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
+        android:background="?attr/selectableItemBackground"
         android:src="@drawable/ic_edit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
