--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,14 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.FloatingButton.AppBarOverlay">
+        android:theme="@style/Theme.RecyclerView.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/teal_700"
-            app:popupTheme="@style/Theme.FloatingButton.PopupOverlay" />
+            app:popupTheme="@style/Theme.RecyclerView.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
